syntax = "proto3";
package pkg.proofs.bitcoin;

option go_package = "github.com/0xPellNetwork/aegis/pkg/proofs/bitcoin";

// Proof represents the proof of a bitcoin transaction
message Proof {
  bytes tx_bytes = 1;
  bytes path = 2;
  uint32 index = 3;
}
